<resources>
    <string name="app_name">Hackathon</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="sci">Science</string>
    <string name="soc">Social Science</string>
    <string name="mth">Math</string>
    <string name="eng">English</string>
    <string name="cbse">CBSE</string>
    <string name="jee">JEE</string>
    <string name="neet">NEET</string>
    <string name="phy">Physics</string>
    <string name="chem">Chemistry</string>
    <string name="bio">Biology</string>
    <string name="edunation">Edunation</string>
    <string name="Hydrocarbons_class12">Hydrocarbons</string>
    <string name="all">Complete</string>
    <string name="chapter_wise">Chapter Wise</string>
</resources>
